# cfg-string-generator-multithread

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  barrier.hpp  cfg_string_generator.hpp  main.cpp
tests/: results.csv  test.sh  to_spreadcheet.py
